# Diophantus

./: CMakeLists.txt  Dockerfile  README.md
etc/cmake/: GMPConfig.cmake  Util.cmake
src/: CMakeLists.txt
src/cli/: CLI.cpp  CMakeLists.txt  Parser.hpp
src/common/: CMakeLists.txt  logging.h  logging.hpp
src/diophantus/: CMakeLists.txt  Solver.cpp  Solver.hpp  Validator.cpp  Validator.hpp
src/diophantus/model/: Assignment.hpp  DeducedEquation.hpp  Equation.cpp  Equation.hpp  EquationSystem.hpp  SimplificationResult.hpp  Solution.hpp  Sum.hpp  Term.cpp  Term.hpp  Variable.hpp  util.cpp  util.hpp
src/diophantus/model/numeric/: BigInt.hpp  GmpBigInt.hpp
src/diophantus/test/: CMakeLists.txt  DeducedEquationTest.cpp  EquationSystemTest.cpp  EquationTest.cpp  GmpBigIntPerformanceTest.cpp  GmpBigIntTest.cpp  SolverTest.cpp  UtilTest.cpp  ValidatorTest.cpp
